autotools package (should be) ready to go

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,19 @@
 AUTOMAKE_OPTIONS = foreign
 # SUBDIRS = src doc examples man scripts
-SUBDIRS = src
+SUBDIRS = src src/tests
+
+# other stuff to be distributed without compiling
+EXTRA_DIST = \
+pixmaps/blokemlogo128.png \
+pixmaps/blokemlogo16.png \
+pixmaps/blokemlogo48.png \
+pixmaps/blokemlogo.png
+
+pixmapdir = $(datadir)/@PACKAGE@/pixmaps
+
+pixmap_DATA = \
+pixmaps/blokemlogo128.png \
+pixmaps/blokemlogo16.png \
+pixmaps/blokemlogo48.png \
+pixmaps/blokemlogo.png
 
