--- a/Makefile.in
+++ b/Makefile.in
@@ -222,7 +222,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
 # SUBDIRS = src doc examples man scripts
-SUBDIRS = src src/tests
+SUBDIRS = src src/tests doc
 
 # other stuff to be distributed without compiling
 EXTRA_DIST = \
