--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -97,6 +97,8 @@ EXEEXT = @EXEEXT@
 GLADEMM_CFLAGS = @GLADEMM_CFLAGS@
 GLADEMM_LIBS = @GLADEMM_LIBS@
 GREP = @GREP@
+GTHREAD_CFLAGS = @GTHREAD_CFLAGS@
+GTHREAD_LIBS = @GTHREAD_LIBS@
 GTKMM_CFLAGS = @GTKMM_CFLAGS@
 GTKMM_LIBS = @GTKMM_LIBS@
 INSTALL = @INSTALL@
@@ -170,10 +172,10 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 INCLUDES = -I$(srcdir)
-AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GLADEMM_CFLAGS) -DDATADIR=\"$(datadir)/blockem\"
-AM_LDFLAGS = -lpthread
+AM_CXXFLAGS = $(GTKMM_CFLAGS) $(GLADEMM_CFLAGS) $(GTHREAD_CFLAGS) -DDATADIR=\"$(datadir)/blockem\"
+AM_LDFLAGS = 
 blockem_DEPENDENCIES = gui_glade_obj.o
-blockem_LDADD = gui_glade_obj.o $(GTKMM_LIBS) $(GLADEMM_LIBS)
+blockem_LDADD = gui_glade_obj.o $(GTKMM_LIBS) $(GLADEMM_LIBS) $(GTHREAD_LIBS)
 CLEANFILES = gui_glade_obj.o compiletime.h
 EXTRA_DIST = \
 gui.glade
@@ -518,6 +520,8 @@ gui_glade_obj.o: gui.glade
 	ld -r -b binary -o $@ $<
 	objcopy --rename-section .data=.rodata,alloc,load,readonly,data,contents $@ $@
 	@echo ' '
+
+main.o: compiletime.h
 
 compiletime.h:
 	@echo "Saving the current date into compiletime.h"
