--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -95,6 +95,8 @@ EXEEXT = @EXEEXT@
 GLADEMM_CFLAGS = @GLADEMM_CFLAGS@
 GLADEMM_LIBS = @GLADEMM_LIBS@
 GREP = @GREP@
+GTHREAD_CFLAGS = @GTHREAD_CFLAGS@
+GTHREAD_LIBS = @GTHREAD_LIBS@
 GTKMM_CFLAGS = @GTKMM_CFLAGS@
 GTKMM_LIBS = @GTKMM_LIBS@
 INSTALL = @INSTALL@
