--- a/configure.ac
+++ b/configure.ac
@@ -24,13 +24,15 @@ AC_CHECK_TOOL([OBJCOPY], [objcopy], [])
 
 AC_CHECK_TOOL([LD], [ld], [])
 
-# OS dependant checking
+# OS dependant checking. http://www.airs.com/ian/configure/configure_5.html
+# This macro will arrange to define a few shell variables...
+AC_CANONICAL_HOST
+
 # win32 check from: http://git.gnome.org/browse/gedit/tree/configure.ac
 AC_MSG_CHECKING([for native win32])
 case "$host" in
     *-*-mingw*)
         os_win32=yes
-        AC_CHECK_TOOL([WINDRES], [windres], [])
         ;;
     *)
         os_win32=no
@@ -38,6 +40,9 @@ case "$host" in
 esac
 AC_MSG_RESULT([$os_win32])
 AM_CONDITIONAL(OS_WIN32, test "$os_win32"="yes")
+if test "$os_win32" = "yes"; then
+    AC_CHECK_TOOL([WINDRES], [windres], [])
+fi
 
 # Checks for libraries.
 PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4 >= 1.0.0])
