gui code cleaned up a bit. drawing area to show pieces in a separate file/class. don't get confused, edit pieces drawing area is temporary on the left side

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -55,6 +55,8 @@ Game1v1.h \
 GameTotalAllocation.cpp \
 GameTotalAllocation.h \
 GUIException.h \
+gui_drawing_area_show_pieces.cpp \
+gui_drawing_area_show_pieces.h   \
 Heuristic.cpp \
 Heuristic.h \
 Piece.cpp \
