--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -53,10 +53,10 @@ CONFIG_CLEAN_VPATH_FILES =
 am__installdirs = "$(DESTDIR)$(bindir)"
 PROGRAMS = $(bin_PROGRAMS)
 am_blockem_OBJECTS = Board.$(OBJEXT) Game1v1.$(OBJEXT) \
-	GameTotalAllocation.$(OBJEXT) \
+	GameTotalAllocation.$(OBJEXT) gui_about_dialog.$(OBJEXT) \
 	gui_drawing_area_show_pieces.$(OBJEXT) Heuristic.$(OBJEXT) \
 	Piece.$(OBJEXT) Player.$(OBJEXT) Rules.$(OBJEXT) \
-	AboutDialog.$(OBJEXT) main.$(OBJEXT) MainWindow.$(OBJEXT) \
+	main.$(OBJEXT) MainWindow.$(OBJEXT) \
 	MainWindowWorkerThread.$(OBJEXT)
 blockem_OBJECTS = $(am_blockem_OBJECTS)
 am__DEPENDENCIES_1 =
@@ -206,9 +206,12 @@ Game1v1.cpp \
 Game1v1.h \
 GameTotalAllocation.cpp \
 GameTotalAllocation.h \
-GUIException.h \
+gui_exception.h \
+gui_about_dialog.cpp \
+gui_about_dialog.h \
 gui_drawing_area_show_pieces.cpp \
 gui_drawing_area_show_pieces.h   \
+gui_glade_defs.h \
 Heuristic.cpp \
 Heuristic.h \
 Piece.cpp \
@@ -217,9 +220,6 @@ Player.cpp \
 Player.h \
 Rules.cpp \
 Rules.h \
-AboutDialog.cpp \
-AboutDialog.h \
-gui_glade.h \
 main.cpp \
 MainWindow.cpp \
 MainWindow.h \
@@ -307,7 +307,6 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/AboutDialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Board.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Game1v1.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/GameTotalAllocation.Po@am__quote@
@@ -317,6 +316,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Piece.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Player.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Rules.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_about_dialog.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_drawing_area_show_pieces.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 
