--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -57,9 +57,9 @@ am_blockem_OBJECTS = Board.$(OBJEXT) Game1v1.$(OBJEXT) \
 	gui_drawing_area_show_pieces.$(OBJEXT) \
 	gui_main_window.$(OBJEXT) \
 	gui_main_window_worker_thread.$(OBJEXT) \
-	gui_table_edit_piece.$(OBJEXT) Heuristic.$(OBJEXT) \
-	Piece.$(OBJEXT) Player.$(OBJEXT) Rules.$(OBJEXT) \
-	main.$(OBJEXT)
+	gui_table_edit_piece.$(OBJEXT) gui_stop_watch_label.$(OBJEXT) \
+	Heuristic.$(OBJEXT) Piece.$(OBJEXT) Player.$(OBJEXT) \
+	Rules.$(OBJEXT) main.$(OBJEXT)
 blockem_OBJECTS = $(am_blockem_OBJECTS)
 am__DEPENDENCIES_1 =
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
@@ -220,6 +220,8 @@ gui_main_window_worker_thread.cpp \
 gui_main_window_worker_thread.h \
 gui_table_edit_piece.cpp \
 gui_table_edit_piece.h   \
+gui_stop_watch_label.cpp \
+gui_stop_watch_label.h \
 Heuristic.cpp \
 Heuristic.h \
 Piece.cpp \
@@ -322,6 +324,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_drawing_area_show_pieces.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_main_window_worker_thread.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_stop_watch_label.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gui_table_edit_piece.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main.Po@am__quote@
 
