pieces can be rotated to left/right and mirror over the x and y axis

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -69,8 +69,8 @@ gui_table_edit_piece.cpp \
 gui_table_edit_piece.h   \
 gui_stop_watch_label.cpp \
 gui_stop_watch_label.h \
-Heuristic.cpp \
-Heuristic.h \
+heuristic.cpp \
+heuristic.h \
 Piece.cpp \
 Piece.h \
 Player.cpp \
