heuristics document added. sources renamed to lowercase

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -1,2 +1,2 @@
 # EXTRA_DIST = CHANGELOG CREDIT HACKING 
-EXTRA_DIST = CHANGELOG TODO HOWTO_WINDOWS
+EXTRA_DIST = CHANGELOG TODO HOWTO_WINDOWS HEURISTICS
