--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -156,7 +156,7 @@ top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 
 # EXTRA_DIST = CHANGELOG CREDIT HACKING 
-EXTRA_DIST = CHANGELOG TODO HOWTO_WINDOWS
+EXTRA_DIST = CHANGELOG TODO HOWTO_WINDOWS HEURISTICS
 all: all-am
 
 .SUFFIXES:
