--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -9,10 +9,10 @@ AM_CXXFLAGS =
 
 blockemtest_SOURCES = \
 main_test.cpp \
-Game1v1Test.cpp \
-Game1v1Test.h
+game1v1_test.cpp \
+game1v1_test.h
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
-blockemtest_LDADD = ../Board.o ../Game1v1.o ../GameTotalAllocation.o ../heuristic.o ../Piece.o ../Player.o ../Rules.o
+blockemtest_LDADD = ../board.o ../game1v1.o ../game_total_allocation.o ../heuristic.o ../piece.o ../player.o ../rules.o
 
