--- a/src/tests/Makefile.in
+++ b/src/tests/Makefile.in
@@ -47,11 +47,11 @@ CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 PROGRAMS = $(noinst_PROGRAMS)
-am_blockemtest_OBJECTS = main_test.$(OBJEXT) Game1v1Test.$(OBJEXT)
+am_blockemtest_OBJECTS = main_test.$(OBJEXT) game1v1_test.$(OBJEXT)
 blockemtest_OBJECTS = $(am_blockemtest_OBJECTS)
-blockemtest_DEPENDENCIES = ../Board.o ../Game1v1.o \
-	../GameTotalAllocation.o ../heuristic.o ../Piece.o ../Player.o \
-	../Rules.o
+blockemtest_DEPENDENCIES = ../board.o ../game1v1.o \
+	../game_total_allocation.o ../heuristic.o ../piece.o \
+	../player.o ../rules.o
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
@@ -184,13 +184,13 @@ INCLUDES = -I$(srcdir)/..
 AM_CXXFLAGS = 
 blockemtest_SOURCES = \
 main_test.cpp \
-Game1v1Test.cpp \
-Game1v1Test.h
+game1v1_test.cpp \
+game1v1_test.h
 
 
 # this should be changed at some point. we should be crating a library with the base blockem classes
 # and then add that library to blockemtest_LIBADD
-blockemtest_LDADD = ../Board.o ../Game1v1.o ../GameTotalAllocation.o ../heuristic.o ../Piece.o ../Player.o ../Rules.o
+blockemtest_LDADD = ../board.o ../game1v1.o ../game_total_allocation.o ../heuristic.o ../piece.o ../player.o ../rules.o
 all: all-am
 
 .SUFFIXES:
@@ -238,7 +238,7 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Game1v1Test.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/game1v1_test.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/main_test.Po@am__quote@
 
 .cpp.o:
