--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -203,8 +203,8 @@ blockem.rc
 blockem_SOURCES = \
 board.cpp \
 board.h \
-boordinate.h \
-boordinate_set.h \
+coordinate.h \
+coordinate_set.h \
 game1v1.cpp \
 game1v1.h \
 game_total_allocation.cpp \
